--- a/deploy/crds/security.lynx.smartx.com_endpoints.yaml
+++ b/deploy/crds/security.lynx.smartx.com_endpoints.yaml
@@ -34,13 +34,25 @@ spec:
           type: object
         spec:
           properties:
-            externalIDName:
+            managePlaneID:
+              description: Lynx allows endpoints from different sources, we distinguish
+                the source of endpoint by field ManagePlaneID.
               type: string
-            externalIDValue:
-              type: string
+            reference:
+              properties:
+                externalIDName:
+                  type: string
+                externalIDValue:
+                  type: string
+              required:
+              - externalIDName
+              - externalIDValue
+              type: object
+            vlanID:
+              type: integer
           required:
-          - externalIDName
-          - externalIDValue
+          - reference
+          - vlanID
           type: object
         status:
           properties:
